--- a/Prueba/pom.xml
+++ b/Prueba/pom.xml
@@ -22,4 +22,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <distributionManagement>
+    <repository>
+        <id>nexus-releases</id>
+        <name>releases</name>
+        <url>http://myNexus/more/stuff</url>
+    </repository>
+</distributionManagement>
 </project>
