--- a/edu/pom.xml
+++ b/edu/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>Prueba</groupId>
-  <artifactId>Prueba</artifactId>
+  <groupId>ucam</groupId>
+  <artifactId>edu</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>Prueba</name>
+  <name>edu</name>
   <url>http://maven.apache.org</url>
 
   <properties>
